// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryItemGroup should correctly render horizontally 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border-left: 3px solid colorBorderDividerDefault;
}

.c0:first-of-type {
  border-top: 0;
  border-left: 0;
}

<div>
  <div
    class="c0"
  >
    <toolbaritem
      items="[object Object]"
      type="button"
    />
    <toolbaritem
      items="[object Object]"
      type="button"
    />
  </div>
</div>
`;

exports[`HistoryItemGroup should render correctly with redo disabled 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 3px solid colorBorderDividerDefault;
}

.c0:first-of-type {
  border-top: 0;
  border-left: 0;
}

<div
  className="c0"
>
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "name": "undo",
          },
          "isDisabled": true,
          "label": "Undo",
          "uuid": "undo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "isMirrored": true,
            "name": "undo",
          },
          "isDisabled": true,
          "label": "Redo",
          "uuid": "redo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
</div>
`;

exports[`HistoryItemGroup should render correctly with redo enabled 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 3px solid colorBorderDividerDefault;
}

.c0:first-of-type {
  border-top: 0;
  border-left: 0;
}

<div
  className="c0"
>
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "name": "undo",
          },
          "isDisabled": true,
          "label": "Undo",
          "uuid": "undo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "isMirrored": true,
            "name": "undo",
          },
          "isDisabled": false,
          "label": "Redo",
          "uuid": "redo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
</div>
`;

exports[`HistoryItemGroup should render correctly with undo disabled 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 3px solid colorBorderDividerDefault;
}

.c0:first-of-type {
  border-top: 0;
  border-left: 0;
}

<div
  className="c0"
>
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "name": "undo",
          },
          "isDisabled": true,
          "label": "Undo",
          "uuid": "undo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "isMirrored": true,
            "name": "undo",
          },
          "isDisabled": true,
          "label": "Redo",
          "uuid": "redo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
</div>
`;

exports[`HistoryItemGroup should render correctly with undo enabled 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top: 3px solid colorBorderDividerDefault;
}

.c0:first-of-type {
  border-top: 0;
  border-left: 0;
}

<div
  className="c0"
>
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "name": "undo",
          },
          "isDisabled": false,
          "label": "Undo",
          "uuid": "undo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
  <ToolbarItem
    items={
      Array [
        Object {
          "icon": Object {
            "isMirrored": true,
            "name": "undo",
          },
          "isDisabled": true,
          "label": "Redo",
          "uuid": "redo",
        },
      ]
    }
    onSelect={[Function]}
    type="button"
  />
</div>
`;
